--- a/mystyle.css
+++ b/mystyle.css
@@ -1,13 +1,2 @@
+h1 { color:green; }
 
-
-h1 { color:blue; }
-<!-- h1 { color:blue; } -->
-h1 { color:#F0A050; }
-h2 { color:#FFFF44; }
-h3 { color:#99FFFF; }
-th,td{ border:double thick pink; }
-th.important { color:red; }
-
-p.sample1 { border: double 10px #0000ff;}
-p.sample2 { border: inset 10px #ff0000;}
-p.sample3 { margin: 30px 30px;padding: 10px;border:medium solid #ff00ff;}
